<resources>
    <string name="app_name">SpaceAppXML</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_sign_in_or_register">Welcome, sign in or register</string>
    <string name="enter_name">Enter name</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="welcome_sign_in_register">Welcome, sign in or register</string>
    <string name="minimum_characters">Enter 7 or more characters</string>
    <string name="email_is_not_valid">Please enter valid email address</string>
    <string name="no_empty_password">Your password cannot be empty</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="mars_rover">Mars Rover</string>
    <string name="nasa_library">NASA Library</string>
    <string name="home">Home</string>
    <string name="user">User</string>
    <string name="title">Title</string>
    <string name="content_description">Content description</string>
    <string name="comment">Comment</string>
    <string name="add_new_photo">Add new photo</string>
    <string name="enter_title">Title</string>
    <string name="select_photo">Select photo</string>
    <string name="post">Post</string>
    <string name="permission_denied">Permission denied</string>
    <string name="access_gallery">Cannot access gallery without permission!</string>
    <string name="posting_success">Your image has been posted</string>
    <string name="posting_failure">Unfortunately, your post has not been posted</string>
    <string name="enter_comment">Enter comment</string>
    <string name="comment_posted">Comment posted!</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="actual_description">Actual description</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="astronomy_picture_of_the_day">Astronomy picture of the day</string>
    <string name="nasa_image_library_item">NASA Image Library item</string>
    <string name="search_for_pictures">Search for pictures</string>
    <string name="pick_date">Pick date</string>
    <string name="like_unlike_imageview">Like/Unlike ImageView</string>
</resources>