<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"

        />
    <item
        android:id="@+id/libraryImagesFragment"
        android:icon="@drawable/ic_photo_library"
        android:title="@string/nasa_library"
        />
    <item
        android:id="@+id/marsPhotosFragment"
        android:icon="@drawable/ic_rover_photo"
        android:title="@string/mars_rover"
        />

    <item
        android:id="@+id/pictureOfTheDayFragment"
        android:icon="@drawable/ic_pic_of_the_day"
        android:title="@string/picture_of_the_day"
        />

</menu>